--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -184,7 +184,7 @@
    "id": "6e9f97bd-ad4c-4688-9610-158383e292b2",
    "metadata": {},
    "source": [
-    "El resto del código se puede utilizar exactamente igual. Solamente es necesario tomar en cuenta las dimensiones, para los datos satelitales se tienen varios días, no solo uno, por lo que en el cálculo de la vorticidad habrá que cambiar el número de días por el 1, como está indicado."
+    "El resto del código se puede utilizar exactamente igual. Solamente es necesario tomar en cuenta las dimensiones, ya que tienen una dimensión más."
    ]
   },
   {
@@ -431,12 +431,12 @@
    ],
    "source": [
     "# Creamos una matriz de ceros con las dimensiones apropiadas de nuestros datos, esta es para la normalización de las predicciones\n",
-    "SPredNorm = np.zeros((1, 130, 297)) # Cuanto tenemos más días el 1, se sustituye por el número de días, en este caso solo hay un día.\n",
+    "SPredNorm = np.zeros((1, 130, 297)) # Cuando tenemos más días el 1, se sustituye por el número de días, en este caso solo hay un día.\n",
     "\n",
     "depth = -0\n",
     "\n",
     "# Le agregamos una dimensión a nuestros datos\n",
-    "xData = np.expand_dims(SSHanom, axis=0)\n",
+    "xData = np.expand_dims(SSHanom, axis=0) # Cuando tenemos datos satelitales modificamos axis=1, por la dimensión extra que tienen\n",
     "xData = xData.astype(np.float32)  # Convierte la entrada a tipo float32\n",
     "\n",
     "# Creamos otra matriz para guardar las prediciones del tamaño de nuestros datos\n",
@@ -453,7 +453,7 @@
     "        \n",
     "    for j in range(0, 130-region_size+1, stride):\n",
     "        model.eval()\n",
-    "        SPred[0, j:j+region_size, i:i+region_size] += np.squeeze(model( torch.tensor(np.reshape(xData[:, j:j+region_size, i:i+region_size], (1, 1, region_size, region_size))) ).detach().numpy())\n",
+    "        SPred[0, j:j+region_size, i:i+region_size] += np.squeeze(model( torch.tensor(np.reshape(xData[:, j:j+region_size, i:i+region_size], (1, 1, region_size, region_size))) ).detach().numpy()) # Para datos satelitales xData[0, 0, j:j+region_size, i:i+regon_size] \n",
     "        mask[j:j+region_size,i:i+region_size] += 1\n",
     "\n",
     "    SPredNorm[0,:,:] = np.divide( SPred, mask )\n",
